<resources>
    <string name="app_name">GreenWater</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Invalid Login or Password</string>
    <string name="home_button_cuve">Calcule dimension de la cuve</string>
    <string name="home_button_mur">Calcule dimension du mur</string>
    <string name="home_button_conso">Calcule d\'auto-sufisance de l\'eau</string>
    <string name="home_button_dashboard">DashBoard</string>
    <string name="login_ckeckbox_remember">Remember me</string>
    <string name="login_button_submit">Submit</string>
    <string name="login_label_login">Login</string>
    <string name="login_label_password">Password</string>
    <string name="hint_text"> </string>
    <string name="tank_label_conso">Consomation journalière (en litre)</string>
    <string name="tank_label_ville">Ville</string>
    <string name="label_res">Resultat : </string>
    <string name="tank_button_calculer">Calculer</string>
    <string name="area_label_dimension_mur">Dimension du mur</string>
    <string name="dashboard_button_vider">Vider</string>
    <string name="dashboard_label_date">Date : ...</string>
    <string name="dashboard_label_ville">Ville : ...</string>
    <string name="dashboard_image_meteo">Icone Meteo</string>
    <string name="home_button_logout">Logout</string>
    <string name="dashboard_label_meteo">Méteo :</string>
    <string name="resultat_carbone">"Résultat (CO2) : "</string>
    <string name="resultat_oxygen">"Résultat (O2) : "</string>
    <string name="home_button_carbone">Calcule de l\'émission de CO2 et production d\'O2</string>
    <string name="carbone_label_surface"> Surface du mur (m2) </string>
    <string name="invalid_parameters">Invalid parameters</string>
</resources>
