<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.ulille.iut.agile.client_android.TankActivity">

    <TextView
        android:id="@+id/resultat_carbone_carbone"
        android:layout_width="375dp"
        android:layout_height="46dp"
        android:background="@drawable/radius_input"
        android:gravity="center"
        android:text="@string/resultat_carbone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_carbone"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/carbone_button_calculer"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:background="@drawable/radius_button"
        android:onClick="onClicCalculer"
        android:text="@string/tank_button_calculer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbone_input_conso"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/carbone_input_conso"
        android:layout_width="321dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbone_label_conso"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/carbone_label_conso"
        android:layout_width="253dp"
        android:layout_height="24dp"
        android:text="@string/carbone_label_surface"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultat_carbone_oxygen"
        app:layout_constraintVertical_bias="0.214" />

    <ImageView
        android:id="@+id/home_header2"
        android:layout_width="482dp"
        android:layout_height="204dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/green_wall" />

    <Button
        android:id="@+id/home_button_carbone"
        android:layout_width="353dp"
        android:layout_height="75dp"
        android:clickable="false"
        android:drawableStart="@drawable/home_button_carbone"
        android:drawableLeft="@drawable/home_button_carbone"
        android:drawablePadding="10dp"
        android:text="@string/home_button_cuve"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resultat_carbone_oxygen"
        android:layout_width="375dp"
        android:layout_height="46dp"
        android:background="@drawable/radius_input"
        android:gravity="center"
        android:text="@string/resultat_oxygen"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultat_carbone_carbone"
        app:layout_constraintVertical_bias="0.07" />

</androidx.constraintlayout.widget.ConstraintLayout>
