<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.ulille.iut.agile.client_android.AreaActivity">

    <Button
        android:id="@+id/home_button_cuve4"
        android:layout_width="353dp"
        android:layout_height="75dp"
        android:clickable="false"
        android:drawableStart="@drawable/home_cuve_button"
        android:drawableLeft="@drawable/home_cuve_button"
        android:drawablePadding="10dp"
        android:text="@string/home_button_cuve"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/area_label_conso"
        android:layout_width="275dp"
        android:layout_height="24dp"
        android:text="@string/tank_label_conso"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_input_dimension_mur"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/area_label_ville"
        android:layout_width="111dp"
        android:layout_height="23dp"
        android:text="@string/tank_label_ville"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_input_conso"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/area_input_conso"
        android:layout_width="321dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_label_conso"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/area_label_dimension_mur"
        android:layout_width="253dp"
        android:layout_height="24dp"
        android:text="@string/area_label_dimension_mur"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultat_area"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/area_input_dimension_mur"
        android:layout_width="321dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_label_dimension_mur"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/area_input_ville"
        android:layout_width="321dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_label_ville"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/home_header3"
        android:layout_width="482dp"
        android:layout_height="204dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/green_wall" />

    <Button
        android:id="@+id/area_button_calculer"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:background="@drawable/radius_button"
        android:onClick="onClicCalculer"
        android:text="@string/tank_button_calculer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_input_ville"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/resultat_area"
        android:layout_width="321dp"
        android:layout_height="47dp"
        android:background="@drawable/radius_input"
        android:gravity="center"
        android:text="@string/label_res"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_cuve4"
        app:layout_constraintVertical_bias="0.076" />

</androidx.constraintlayout.widget.ConstraintLayout>
