<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.ulille.iut.agile.client_android.TankActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:background="@drawable/radius_button"
        android:onClick="onClicCalculer"
        android:text="@string/tank_button_calculer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/login2"
        android:layout_width="321dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="111dp"
        android:layout_height="23dp"
        android:text="@string/tank_label_ville"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="320dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/radius_input"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textPassword"
        android:shadowColor="#FFFFFF"
        android:singleLine="false"
        android:textColor="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="253dp"
        android:layout_height="24dp"
        android:text="@string/tank_label_conso"
        android:textColor="#73C0E0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultat"
        app:layout_constraintVertical_bias="0.119" />

    <ImageView
        android:id="@+id/home_header2"
        android:layout_width="482dp"
        android:layout_height="204dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/green_wall" />

    <Button
        android:id="@+id/home_button_cuve2"
        android:layout_width="411dp"
        android:layout_height="117dp"
        android:clickable="false"
        android:drawableStart="@drawable/home_cuve_button"
        android:drawableLeft="@drawable/home_cuve_button"
        android:drawablePadding="10dp"
        android:text="@string/home_button_cuve"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resultat"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:background="@drawable/radius_input"
        android:gravity="center"
        android:text="@string/tank_label_res"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_cuve2"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>
